--- a/requirements.txt
+++ b/requirements.txt
@@ -38,6 +38,8 @@ pyyaml>=6.0
 joblib>=1.3.0
 python-dotenv>=1.0.0
 questionary>=2.0.0
+kaggle>=1.5.16
+requests>=2.31.0
 
 # Development & Testing
 pytest>=7.4.0
